Fix SKU details page showing nothing when 'All' selected

--- a/templates/sku_details.html
+++ b/templates/sku_details.html
@@ -107,9 +107,9 @@
         </div>
       </div>
     </div>
-    {% if sku %}
-    <div class="table-responsive">
-    <table class="table is-fullwidth is-striped is-narrow mb-4">
+      {# Show summary for selected SKU or all SKUs #}
+      <div class="table-responsive">
+      <table class="table is-fullwidth is-striped is-narrow mb-4">
       <thead>
         <tr><th>Source</th><th>Quantity</th><th>Total $</th></tr>
       </thead>
@@ -151,9 +151,8 @@
         </tr>
         {% endfor %}
       </tbody>
-    </table>
-    </div>
-    {% endif %}
+      </table>
+      </div>
   </div>
 </div>
 <script>
