--- a/templates/export_form.html
+++ b/templates/export_form.html
@@ -16,12 +16,26 @@
       </div>
       <div class="field mb-4">
         <label class="checkbox">
-          <input type="checkbox" name="include_month" {% if include_month %}checked{% endif %}> Include monthly report
+          <input type="checkbox" name="include_month_summary" {% if include_month_summary %}checked{% endif %}>
+          Last full month by sales type
         </label>
       </div>
       <div class="field mb-4">
         <label class="checkbox">
-          <input type="checkbox" name="include_year" {% if include_year %}checked{% endif %}> Include yearly report
+          <input type="checkbox" name="include_month_details" {% if include_month_details %}checked{% endif %}>
+          Detailed by type
+        </label>
+      </div>
+      <div class="field mb-4">
+        <label class="checkbox">
+          <input type="checkbox" name="include_year_overall" {% if include_year_overall %}checked{% endif %}>
+          Overall sales by month
+        </label>
+      </div>
+      <div class="field mb-4">
+        <label class="checkbox">
+          <input type="checkbox" name="include_year_summary" {% if include_year_summary %}checked{% endif %}>
+          Yearly summary by type
         </label>
       </div>
       <div class="field">
