--- a/templates/export_form.html
+++ b/templates/export_form.html
@@ -14,6 +14,7 @@
           </select>
         </div>
       </div>
+      <h3 class="title is-5">Monthly reports</h3>
       <div class="field mb-4">
         <label class="checkbox">
           <input type="checkbox" name="include_month_summary" {% if include_month_summary %}checked{% endif %}>
@@ -26,6 +27,7 @@
           Detailed by type
         </label>
       </div>
+      <h3 class="title is-5 mt-4">Yearly reports</h3>
       <div class="field mb-4">
         <label class="checkbox">
           <input type="checkbox" name="include_year_overall" {% if include_year_overall %}checked{% endif %}>
