Fix UI layout and report export

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -44,7 +44,7 @@
     </div>
   </div>
 </div>
-<div class="has-text-right">
+<div class="has-text-left">
 <a href="/monthly-report" class="mdc-button mdc-button--raised">📊 View reports</a>
 </div>
 {% endblock %}
