--- a/templates/report_pdf.html
+++ b/templates/report_pdf.html
@@ -30,7 +30,7 @@
   {% endif %}
   {% if include_month_summary %}
   <h2>Last month sales by type ({{ last_month_label }})</h2>
-  <table class="table is-fullwidth is-striped is-narrow">
+  <table class="table is-fullwidth is-striped is-narrow is-bordered">
     <thead>
       <tr><th>Type</th><th>{{ last_month_label }} $</th><th>vs Last Year</th><th>Avg Month $</th><th>Best Month $</th></tr>
     </thead>
@@ -46,14 +46,16 @@
     {% endfor %}
     </tbody>
   </table>
+  {% if include_month_details or include_year_overall or include_year_summary %}
   <div class="page-break"></div>
+  {% endif %}
   {% endif %}
 
   {% if include_month_details %}
   {% for cat, rows in sku_details.items() %}
   {% if rows %}
   <h3 class="mt-4">{{ labels[cat] }} Details ({{ last_month_label }})</h3>
-  <table class="table is-fullwidth is-striped is-narrow">
+  <table class="table is-fullwidth is-striped is-narrow is-bordered">
     <thead>
       <tr>
         <th>SKU</th><th>Yearly $</th><th>Yearly Qty</th><th>{{ last_month_label }} $</th><th>{{ last_month_label }} Qty</th><th>Avg Month $</th><th>Avg Qty</th><th>Last Year $</th><th>Best Month $</th><th>Best Qty</th>
@@ -102,12 +104,14 @@
     {% endfor %}
     </tbody>
   </table>
+  {% if include_year_summary %}
   <div class="page-break"></div>
+  {% endif %}
   {% endif %}
 
   {% if include_year_summary %}
   <h3>Yearly summary by type</h3>
-  <table class="table is-fullwidth is-striped is-narrow">
+  <table class="table is-fullwidth is-striped is-narrow is-bordered">
     <thead>
       <tr><th>Type</th><th>Total $</th><th>vs Last Year</th><th>Avg Month $</th><th>Best Month $</th><th>Avg Qty</th><th>Best Qty</th></tr>
     </thead>
