Fix extra page break in PDF export

--- a/templates/report_pdf.html
+++ b/templates/report_pdf.html
@@ -46,7 +46,7 @@
     {% endfor %}
     </tbody>
   </table>
-  {% if include_month_details or include_year_overall or include_year_summary %}
+  {% if include_month_details %}
   <div class="page-break"></div>
   {% endif %}
   {% endif %}
