--- a/templates/report_pdf.html
+++ b/templates/report_pdf.html
@@ -7,7 +7,8 @@
     @page { size: A4 landscape; margin: 1cm; }
     body { margin: 0; color: #363636; font-size: 10pt; }
     .page-break { page-break-after: always; }
-    .logo { max-height: {{ logo_size }}px; }
+      /* set explicit height so xhtml2pdf scales the image */
+      .logo { height: {{ logo_size }}px; }
     .logo-wrap {
       width: 100%;
       text-align: center;
@@ -42,7 +43,7 @@
     <tr>
       <td>
         {% if branding_logo_url %}
-        <img src="{{ branding_logo_url }}" alt="logo" class="logo">
+        <img src="{{ branding_logo_url }}" alt="logo" class="logo" style="height: {{ logo_size }}px;">
         {% endif %}
       </td>
     </tr>
